--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-"__pycache__/" 
-".env" 
+
+# Python
+__pycache__/
+*.pyc
+
+# Node
+node_modules/
+build/
+
+# Docker data
+db/data/
+redis/data/
+
+# Env
+.env*
