--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,29 @@
-
 # Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
 
-# Node
+# Node/React
 node_modules/
 build/
+dist/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
-# Docker data
+# OS/IDE
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
+
+# 환경변수/비밀정보
+.env
+.env.*
+*.env
+
+# 도커 데이터/볼륨
 db/data/
 redis/data/
-
-# Env
-.env*
