--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,1 +1,6 @@
-# 운영용 Dockerfile (FastAPI)
+FROM python:3.11-slim
+WORKDIR /app
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+COPY ./app /app/app
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0"]
