--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -1,1 +1,9 @@
-# 개발용 Nginx conf
+server {
+    listen 80;
+    location /api/ {
+        proxy_pass http://backend:8000/;
+    }
+    location / {
+        proxy_pass http://host.docker.internal:3000;
+    }
+}
