--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -1,1 +1,9 @@
-# 운영용 Nginx conf
+server {
+    listen 80;
+    location /api/ {
+        proxy_pass http://backend:8000/;
+    }
+    location / {
+        proxy_pass http://frontend:80;
+    }
+}
